# mtl

./: .editorconfig  .gitattributes  .gitignore  LICENSE  ThirdPartyNotices.txt  contributing.md  readme.md
.github/workflows/: ci.yml
docs/: clang-windows.md  differences.md  documentation.md  listing.md  macros.md  naming.md
mtl/: algorithm.hpp  console.hpp  container.hpp  conversion.hpp  definitions.hpp  filesystem.hpp  fmt_include.hpp  math.hpp  numeric.hpp  random.hpp  safety.hpp  stopwatch.hpp  string.hpp  type_traits.hpp  utility.hpp  xoroshiro128plus.hpp  xorshift128plus.hpp  xoshiro256plus.hpp
mtl/fmt/: format-inl.h
tests/: CMakeLists.txt  doctest.h  doctest_include.hpp  main.cpp  tests_algorithm.cpp  tests_console.cpp  tests_container.cpp  tests_conversion.cpp  tests_filesystem.cpp  tests_math.cpp  tests_numeric.cpp  tests_random.cpp  tests_safety.cpp  tests_stopwatch.cpp  tests_string.cpp  tests_type_traits.cpp  tests_utility.cpp  tests_xoroshiro128plus.cpp  tests_xorshift128plus.cpp  tests_xoshiro256plus.cpp
utilities/: blacklist.txt  check-clang-analyzer.sh  check-clang-sanitizers.sh  check-clang-tidy.sh  check-gcc-analyzer.sh  check-gcc-sanitizers.sh  common.py  compile-all-compilers.bat  compile-all-compilers.sh  generate-documentation.py  generate-test-coverage.sh  mtl-format.py
